# medbrand-booking

./: .env.dist  docker-compose.yml
backend/: pyproject.toml
backend/src/medsyncapp/migrations/versions/: uzbek_doctors_som_prices.py
backend/src/medsyncapp/tgbot/: bot.py
backend/src/medsyncapp/tgbot/handlers/: bookings.py  start.py  test_results.py  web_app.py
backend/src/medsyncapp/tgbot/keyboards/: inline.py
backend/src/medsyncapp/webhook/routers/: booking.py
frontend/: index.html  package.json
frontend/src/components/Booking/: TimeSlot.jsx
frontend/src/components/DoctorsListing/: DoctorCard.jsx
frontend/src/components/GetTested/: DiagnosticType.jsx
frontend/src/components/Resume/: SummaryInfo.jsx
frontend/src/pages/: appointment-booking.jsx  booking-resume.jsx  clinic-selection.jsx  doctor-about.jsx  doctor-selection.jsx  get-tested.jsx  landing-page.jsx  patient-info-form.jsx  successful-booking.jsx
frontend/src/scss/blocks/: _body.scss  _button.scss  _patient-information.scss  _time-details.scss
scripts/: update_frontend_url.sh
